# riollama

./: .env.sample  .gitignore  Makefile  README.md  docker-compose.yaml  pyproject.toml  requirements.txt  rio.toml
app/: __init__.py  conversation.py
app/components/: __init__.py  chat_message.py  chat_suggestion_card.py  drawer.py  empty_chat_placeholder.py  generating_response_placeholder.py  header.py
app/pages/: __init__.py  about_page.py  chat_page.py
app/themes/: __init__.py  utils.py
